Added more references to the documentation

--- a/fairness/colab_workshop_tutorial_credit_scoring.ipynb
+++ b/fairness/colab_workshop_tutorial_credit_scoring.ipynb
@@ -65,7 +65,7 @@
       "metadata": {
         "id": "mInjxhdlZWAh",
         "colab_type": "code",
-        "outputId": "60d91e54-aa9c-4dd1-d0dc-282f0707da2f",
+        "outputId": "95b60036-6081-4724-d2dc-f478871695c9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -75,7 +75,7 @@
         "# Verify that the environment has python 3\n",
         "!python --version"
       ],
-      "execution_count": 21,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -91,7 +91,11 @@
       "metadata": {
         "id": "x4hQ7n1vZWAr",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "50a51eb1-35ff-415b-acf3-e14f78003996"
       },
       "source": [
         "!pip install -q -U \\\n",
@@ -115,24 +119,35 @@
         "#  \"gast>=0.3.2\" \\\n",
         "#  \"scikit-learn==0.22.1\" \\\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\u001b[K     |████████████████████████████████| 56.4MB 74kB/s \n",
+            "\u001b[K     |████████████████████████████████| 71kB 8.5MB/s \n",
+            "\u001b[K     |████████████████████████████████| 3.6MB 50.9MB/s \n",
+            "\u001b[?25h"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "wuco7UsI9hMC",
         "colab_type": "code",
+        "outputId": "4bbf6953-1aa7-41f4-86ed-d7a6ea915954",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "3f69f272-f699-4980-df59-bb2c8169685b"
+        }
       },
       "source": [
         "!pip freeze"
       ],
-      "execution_count": 23,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -545,7 +560,7 @@
         "id": "WVns2QpOlnXk",
         "colab_type": "code",
         "cellView": "form",
-        "outputId": "5553567f-b0b4-4c5b-bf1c-d4a123f81b9a",
+        "outputId": "a8588a3e-59da-4cfb-8fc4-70d570d215b9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -708,7 +723,7 @@
         "            favorable_label=favorable_label,\n",
         "            unfavorable_label=unfavorable_label, metadata=metadata)"
       ],
-      "execution_count": 24,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -777,8 +792,8 @@
         "Bias can enter the system in any of the three steps above.  The training data set may be biased in that its outcomes may be biased towards particular kinds of instances.  The algorithm that creates the model may be biased in that it may generate models that are weighted towards particular features in the input. The test data set may be biased in that it has expectations on correct answers that may be biased.  These three points in the machine learning process represent points for testing and mitigating bias.  In AI Fairness 360 codebase, we call these points _pre-processing_, _in-processing_, and _post-processing_. \n",
         "\n",
         "### AI Fairness 360\n",
-        "We are now ready to utilize AI Fairness 360 (`aif360`) to detect and mitigate bias.  We will use the German credit dataset, splitting it into a training and test dataset.  We will look for bias in the creation of a machine learning model to predict if an applicant should be given credit based on various features from a typical credit application.  The protected attribute will be \"Age\", with \"1\" (older than or equal to 25) and \"0\" (younger than 25) being the values for the privileged and unprivileged groups, respectively.\n",
-        "For this first tutorial, we will check for bias in the initial training data, mitigate the bias, and recheck.  More sophisticated machine learning workflows are given in the author tutorials and demo notebooks in the codebase.\n",
+        "We are now ready to utilize AI Fairness 360 (`aif360`) to detect and mitigate bias.  We will use the German credit dataset ([documentation raw](https://github.com/IBM/AIF360/tree/master/aif360/data/raw/german), [documentation code](https://aif360.readthedocs.io/en/latest/modules/generated/aif360.datasets.GermanDataset.html)), splitting it into a training and test dataset.  We will look for bias in the creation of a machine learning model to predict if an applicant should be given credit based on various features from a typical credit application.  The protected attribute will be \"Age\", with \"1\" (older than or equal to 25) and \"0\" (younger than 25) being the values for the privileged and unprivileged groups, respectively.\n",
+        "For this first tutorial, we will **check for bias in the initial training data, mitigate the bias, and recheck**.  More sophisticated machine learning workflows are given in the author tutorials and demo notebooks in the codebase.\n",
         "\n",
         "Here are the steps involved\n",
         "#### Step 1: Write import statements\n",
@@ -787,6 +802,16 @@
         "#### Step 4: Mitigate bias by transforming the original dataset\n",
         "#### Step 5: Compute fairness metric on transformed training dataset\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yIYHz9GXZoG_",
+        "colab_type": "text"
+      },
+      "source": [
+        "We are assuming here that you know this dataset. But that is not necessarily true. [Here](http://srisai85.github.io/GermanCredit/German.html) is an example of an exploratory data analysis on this dataset that can help you familiarize with this dataset."
       ]
     },
     {
@@ -805,7 +830,11 @@
       "metadata": {
         "id": "u4Oks3wqZWAx",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "31556e7e-8784-4f9c-fbe0-d7a626af084e"
       },
       "source": [
         "# Load all necessary packages\n",
@@ -821,8 +850,18 @@
         "\n",
         "from IPython.display import Markdown, display"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/aif360/algorithms/preprocessing/lfr_helpers/helpers.py:2: NumbaDeprecationWarning: An import was requested from a module that has moved location.\n",
+            "Import of 'jit' requested from: 'numba.decorators', please update to use 'numba.core.decorators' or pin to Numba version 0.48.0. This alias will not be present in Numba version 0.50.0.\n",
+            "  from numba.decorators import jit\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -878,7 +917,7 @@
       "metadata": {
         "id": "Owj_fVwsZWA3",
         "colab_type": "code",
-        "outputId": "a7e62b85-2d8e-4c69-d211-c85517bf1c57",
+        "outputId": "b568bf47-ef92-4593-ac68-3fcb83a0075c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -892,7 +931,7 @@
         "printb(\"#### Original training dataset\")\n",
         "print(\"Difference in mean outcomes between unprivileged and privileged groups = %f\" % metric_orig_train.mean_difference())"
       ],
-      "execution_count": 28,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -952,7 +991,7 @@
       "metadata": {
         "id": "aQ-8COPBZWBE",
         "colab_type": "code",
-        "outputId": "68a57a85-b860-4324-99fe-09694d082b93",
+        "outputId": "fd76947e-06d8-489e-d027-c6119fc599ba",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -966,7 +1005,7 @@
         "printb(\"#### Transformed training dataset\")\n",
         "print(\"Difference in mean outcomes between unprivileged and privileged groups = %f\" % metric_transf_train.mean_difference())"
       ],
-      "execution_count": 30,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -1311,7 +1350,7 @@
       "metadata": {
         "id": "WegTEexxaeQ5",
         "colab_type": "code",
-        "outputId": "f06ebe01-6ee4-4999-a40a-663d946091d0",
+        "outputId": "91e0c594-1db1-41ca-de71-51197a67fff6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1321,7 +1360,7 @@
         "adult_dataset = AdultDataset()\n",
         "adult_dataset_train, adult_dataset_test = adult_dataset.split([0.7], shuffle=True)"
       ],
-      "execution_count": 32,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -1337,7 +1376,7 @@
       "metadata": {
         "id": "ud6k8wVLZZ5b",
         "colab_type": "code",
-        "outputId": "5ea95602-595f-4d2b-a7e3-ced653da1b0f",
+        "outputId": "66a0d19a-cbba-4bd0-ffb4-76ca6aa871a0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
@@ -1357,7 +1396,7 @@
         "unprivileged_groups = [{sens_attr:adult_dataset_train.unprivileged_protected_attributes[sensitive_atributes_idx][0]}] \n",
         "print(\"The unpriviledged group is: {groups}\".format(groups=unprivileged_groups))"
       ],
-      "execution_count": 33,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -1385,7 +1424,7 @@
       "metadata": {
         "id": "uJrTUEhVdqFF",
         "colab_type": "code",
-        "outputId": "3ae292be-64ca-452f-d66e-13bf19ac4693",
+        "outputId": "ce2dab54-1fd0-4ee4-8a7a-c1a712dc92ca",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -1399,7 +1438,7 @@
         "printb(\"#### Original training dataset\")\n",
         "print(\"Difference in mean outcomes between privileged and unprivileged groups = %f\" % metric_orig_train.mean_difference())"
       ],
-      "execution_count": 34,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -1452,7 +1491,7 @@
       "metadata": {
         "id": "ywkvmzOaqxoq",
         "colab_type": "code",
-        "outputId": "57619ba0-42ed-4864-e44e-e5dfa69d38a8",
+        "outputId": "b9ec4fac-6507-45ae-cb68-bb7034f02f50",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -1466,7 +1505,7 @@
         "printb(\"#### Transformed training dataset\")\n",
         "print(\"Difference in mean outcomes between unprivileged and privileged groups = %f\" % metric_transf_train.mean_difference())"
       ],
-      "execution_count": 36,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -1503,7 +1542,7 @@
       "metadata": {
         "id": "_W9mLVmzq1w1",
         "colab_type": "code",
-        "outputId": "7b133779-f193-4470-8a29-efebce187b1e",
+        "outputId": "0335b31d-3bb5-41ee-d396-519eb4385914",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -1513,7 +1552,7 @@
         "printb(\"#### Transformed training dataset\")\n",
         "print(\"The ratio of the disparate impact in outcomes between unprivileged and privileged groups = %f\" % metric_transf_train.disparate_impact())"
       ],
-      "execution_count": 37,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
